--- a/styles/style.css
+++ b/styles/style.css
@@ -17,6 +17,9 @@
 .text-gray{
   color: #424242;
 }
+.text-primary{
+  color: #FF900E;
+}
 
 .text-light-gray{
   color: #727272;
@@ -33,6 +36,18 @@
   border-radius: 8px;
   border: none;
 
+}
+main{
+  max-width: 1440px;
+  margin: 0 auto;
+}
+main > section{
+  margin-top: 130px;
+}
+
+.section-title{
+  font-size: 2.8rem;
+  font-weight: 700;
 }
 
 /* header style */
@@ -75,9 +90,49 @@
   width: 100%;
 }
 
+/* team and feature related style */
+.teams{
+  align-items: center;
+
+}
+.teams-img-container{
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 24px;
+}
+.our-features{
+  margin-left: 130px;
+  max-width: 530px;
+}
+
+#quick-list{
+  font-weight: 500;
+}
+
 /* responsive quray media */
 @media screen and (max-width: 576px) {
-  .navbar, .nav-link{
+  .navbar, 
+  .nav-link,
+  .teams {
     flex-direction: column;
   }
+.teams-img-container{
+  grid-template-columns: repeat(1, 1fr);
+}
+.our-features{
+  margin-left: 20px;
+}
+  
+
+
+}
+/* medium size device */
+@media screen and (min-width: 576px) and (max-width: 992px) {
+  .teams{
+    flex-direction: column;
+  }
+  .our-features{
+    margin: 50px auto;
+  }
+
 }
