added feature responsive

--- a/styles/style.css
+++ b/styles/style.css
@@ -108,6 +108,43 @@ main > section{
 #quick-list{
   font-weight: 500;
 }
+/* features sesction style */
+.features{
+  gap: 140px;
+}
+
+#features-section-title{
+  border-left: 5px solid #FF900E;
+  padding-left: 21px;
+}
+.feature-card{
+   padding: 30px;
+  box-shadow: 0 4px 30px 0 rgba(0, 0, 0, 0.06);
+  margin-bottom: 20px;
+  border-radius: 8px;
+}
+.feature-card .feature-title{
+  font-weight: 600;
+  font-size: 1.25rem;
+  margin-top: 0px;
+  margin-bottom: 0px;
+ 
+
+}
+#Experience-badge{
+  padding: 45px 42px;
+  font-size: 1.5rem;
+  font-weight: 500;
+  margin-left: -100px;
+  margin-top: -100px;
+}
+#Experience-year{
+  font-size: 4rem;
+  font-weight: 700;
+}
+.feature-architect img{
+  width: 100%;
+}
 
 /* some facts related style */
 .facts-container{
@@ -152,10 +189,20 @@ main > section{
   filter: grayscale(100%);
 }
 
+/* footer style */
+.footer{
+  font-size: 20px;
+  text-align: center;
+  justify-content: center;
+  padding: 20px;
+  background-color: rgba(255, 244, 231, 1);
+}
+
 /* responsive quray media */
 @media screen and (max-width: 576px) {
   .navbar, 
   .nav-link,
+  .features,
   .teams {
     flex-direction: column;
   }
@@ -177,22 +224,32 @@ main > section{
 .our-features{
   margin-left: 20px;
 }
-  
+  #Experience-badge{
+    margin-top: 20px;
+    margin-left: 20px;
+  }
 
 
 }
 /* medium size device */
 @media screen and (min-width: 576px) and (max-width: 992px) {
-  .teams{
+  .teams, .features{
     flex-direction: column;
   }
   .our-features{
     margin: 50px auto;
   }
 
-}
+
 .sponsor-compani, .facts-container{
   grid-template-columns: repeat(2, 1fr);
   gap: 50px;
   justify-items: center;
+}
+#Experience-badge{
+    margin-top: 20px;
+    margin-left: 20px;
+  }
+
+
 }
